Fix position of dotted line in TOC
It was 1px too far up. I'm sure it bothered everyone just like me.

--- a/app/Resources/scss/sections/_toc.scss
+++ b/app/Resources/scss/sections/_toc.scss
@@ -75,7 +75,7 @@
 
     // Dotted line below
     &::after {
-        bottom: 7px;
+        bottom: 6px;
         content: '';
         left: 0;
         min-width: 4em;
